# cogitum

./: .gitignore  AUDIT.md  CHANGELOG.md  LICENSE  README.md  error.txt  pyproject.toml  table.md  test_cli.md  test_kiro.txt
cogitum/: __init__.py  __main__.py  app.py  cli.py  cli_mcp.py  cogitum.tcss  cogitum.tcss.template  design.py  setup_flow.py  setup_mcp.py  tcss_render.py  themes.py  update_flow.py
npm/: README.md  package.json
scripts/: install.ps1  install.sh  screenshots.py  snap.py  test_update.sh
tests/: conftest.py  test_agent_aclose.py  test_agent_tool_result_emit_safe.py  test_anthropic_assistant_empty_content_thinking.py  test_anthropic_empty_content_protection.py  test_anthropic_thinking_signature.py  test_anthropic_tool_id_missing.py  test_app_responsive_classes.py  test_approval_file_mode.py  test_approval_persistence.py  test_approval_queue_none_warns.py  test_approval_restore_cap.py  test_approval_rtl_strip.py  test_approval_save_async.py  test_approval_widget.py  test_atomic_io.py  test_auth_storage_atomic.py  test_banner_threshold.py  test_browser_live.py  test_browser_ssrf.py  test_browser_ssrf_partial.py  test_cogit.py  test_command_guards_no_agent.py  test_compact_task_tracked.py  test_compaction.py  test_compaction_preserves_tool_pairing.py  test_composer_short.py  test_config_writer.py  test_delegate_error_propagates.py  test_delegate_top_level_guard.py  test_event_handler_naming.py  test_fallback_summary.py  test_feed_truncate.py  test_godmode.py  test_godmode_persona_lock.py  test_godmode_scripts_gate.py  test_inspector_responsive.py  test_invalid_json_tool_args.py  test_legion.py  test_legion_agent_integration.py  (+72 more)
(+161 files in other folders)
